--- a/PPBuy/PPBuy/Classes/Home(首页)/Views/PPHomeTopItem.xib
+++ b/PPBuy/PPBuy/Classes/Home(首页)/Views/PPHomeTopItem.xib
@@ -7,7 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PPHomeTopItem">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="41"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="41"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pz2-Xq-d0n" userLabel="分割线">
@@ -17,8 +17,8 @@
                         <constraint firstAttribute="width" constant="1" id="whb-Mz-AVc"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYk-Hb-gMJ" userLabel="标题">
-                    <rect key="frame" x="46" y="0.0" width="69" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYk-Hb-gMJ" userLabel="标题">
+                    <rect key="frame" x="46" y="0.0" width="99" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="Fb3-lJ-oY7"/>
                     </constraints>
@@ -26,14 +26,14 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EhF-uB-YTf" userLabel="子标题">
-                    <rect key="frame" x="51" y="22" width="64" height="14"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EhF-uB-YTf" userLabel="子标题">
+                    <rect key="frame" x="51" y="22" width="94" height="14"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="khP-xv-zdk" userLabel="图标按钮">
-                    <rect key="frame" x="0.0" y="0.0" width="120" height="41"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="khP-xv-zdk" userLabel="图标按钮">
+                    <rect key="frame" x="0.0" y="0.0" width="150" height="41"/>
                     <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <state key="normal" image="icon_district">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
